alterando index - adicionando frase de boas vindas e informações sobre itens

--- a/ayamo_expenses/index.html
+++ b/ayamo_expenses/index.html
@@ -6,7 +6,18 @@
     <title>Ayamo Expenses</title>
 </head>
 <body>
-    <h1></h1>
-    <h2>Ayamo Expenses</h2>
+    <h1>Ayamo Expenses</h1>
+    <br>
+    <h2>Bem-vindo <i><u>usuário</u></i></h2>
+    <br>
+    <h4>Você tem:</h4>
+    <p>__ itens aguardando <b>aprovação</b></p>
+    <p>__ itens aguardando <b>reembolso</b></p>
+    <p>__ itens aguardando <b>sua resposta</b></p>
+    <p>__ itens <b>finalizados nos últimos 15 dias</b></p>
+    <br>
+    <br>
+    <h3><a href="adicionar_despesa.html"> Adicionar Despesa</h3>
+
 </body>
 </html>
