incluídos formulários Motivo da Despesa, Tipo de Despesa e Valor da Despesa

--- a/ayamo_expenses/adicionar_despesa.html
+++ b/ayamo_expenses/adicionar_despesa.html
@@ -9,40 +9,47 @@
     <div id="motivoDespesa">
         <h3>Motivo da Despesa</h3>
         <form action="/submit" method="post">
-            <input type="radio" name="motivoDespesa" id="desp1" value="business and travel">
-            <label for="desp1">Business and Travel</label>
+            <input type="radio" name="motivoDespesa" id="motivo1" value="business and travel">
+            <label for="motivo1">Business and Travel</label>
             <br>
-            <input type="radio" name="motivoDespesa" id="desp2" value="food shows">
-            <label for="desp2">Food Shows</label>
+            <input type="radio" name="motivoDespesa" id="motivo2" value="food shows">
+            <label for="motivo2">Food Shows</label>
             <br>
-            <input type="radio" name="motivoDespesa" id="desp3" value="intercompany">
-            <label for="desp3">Intercompany</label>
+            <input type="radio" name="motivoDespesa" id="motivo3" value="intercompany">
+            <label for="motivo3">Intercompany</label>
             <br>
-            <input type="radio" name="motivoDespesa" id="desp4" value="client and supplier">
-            <label for="desp4">Client and Supplier</label>
+            <input type="radio" name="motivoDespesa" id="motivo4" value="client and supplier">
+            <label for="motivo4">Client and Supplier</label>
             <br>
             <input type="radio" name="motivoDespesa" id="motivo5" value="other travels">
-            <label for="desp5">Other Travels</label>
+            <label for="motivo5">Other Travels</label>
         </form>
     </div>
     <br>
     <div id="tipoDespesa">
         <h3>Tipo de Despesa</h3>
         <form action="/submit" method="post">
-            <input type="radio" name="despesa" id="desp1" value="business and travel">
-            <label for="desp1">Business and Travel</label>
+            <input type="radio" name="tipoDespesa" id="tipo1" value="hospedagem">
+            <label for="tipo1">Hospedagem</label>
             <br>
-            <input type="radio" name="despesa" id="desp2" value="food shows">
-            <label for="desp2">Food Shows</label>
+            <input type="radio" name="tipoDespesa" id="tipo2" value="passagem">
+            <label for="tipo2">Passagem</label>
             <br>
-            <input type="radio" name="despesa" id="desp3" value="intercompany">
-            <label for="desp3">Intercompany</label>
+            <input type="radio" name="tipoDespesa" id="tipo3" value="mobilidade">
+            <label for="tipo3">Mobilidade</label>
             <br>
-            <input type="radio" name="despesa" id="desp4" value="client and supplier">
-            <label for="desp4">Client and Supplier</label>
+            <input type="radio" name="tipoDespesa" id="tipo4" value="alimentação">
+            <label for="tipo4">Alimentação</label>
             <br>
-            <input type="radio" name="despesa" id="desp5" value="other travels">
-            <label for="desp5">Other Travels</label>
+            <input type="radio" name="tipoDespesa" id="tipo5" value="Outras">
+            <label for="tipo5">Outras</label>
+        </form>
+    </div>
+    <br>
+    <div id="valorDespesa">
+        <h4>Valor da Despesa</h4>
+        <form action="/submit" method="post">
+            <input type="text" name="valorDespesa" id="valorDespesa">
         </form>
     </div>
 </body>
