adicionados os itens da página Adicionar Despesa

--- a/ayamo_expenses/adicionar_despesa.html
+++ b/ayamo_expenses/adicionar_despesa.html
@@ -52,5 +52,28 @@
             <input type="text" name="valorDespesa" id="valorDespesa">
         </form>
     </div>
+    <br>
+    <div id="dataDespesa">
+        <h4>Data da Despesa</h4>
+        <form action="/submit" method="post">
+            <input type="date" name="dataDespesa" id="dataDespesa">
+        </form>
+    </div>
+    <br>
+    <div id="descricaoDespesa">
+        <h4>Descrição da Despesa</h4>
+        <form action="/submit" method="post">
+            <input type="text" name="descricaoDespesa" id="descricaoDespesa">
+        </form>
+    </div>
+    <br>
+        <h4>Insira o comprovante</h4>
+        <form action="/submit" method="post">
+            <input type="file" name="comprovante" id="comprovante">
+        </form>
+    <br>
+    <div id="submit">
+        <input type="submit" value="Enviar">
+    </div>
 </body>
 </html>
