--- a/ayamo_expenses/adicionar_despesa.html
+++ b/ayamo_expenses/adicionar_despesa.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar Despesa</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        h4 {
+            text-align: center;
+            margin: 0;
+        }
+        h3 {
+            text-align: center;
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
     <div id="motivoDespesa">
