Adicionado estilo inicial às páginas Index e Adicionar Despesa

--- a/ayamo_expenses/index.html
+++ b/ayamo_expenses/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayamo Expenses</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: top;
+            height: 100vh;
+            margin: 0;
+        }
+        h4 {
+            text-align: center;
+            margin: 0;
+        }
+        h3 {
+            text-align: center;
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
     <h1>Ayamo Expenses</h1>
     <br>
-    <h2>Bem-vindo <i><u>usuário</u></i></h2>
+    <h2>Bem-vindo, <i><u>usuário</u></i></h2>
     <br>
     <h4>Você tem:</h4>
     <p>__ itens aguardando <b>aprovação</b></p>
