--- a/ayamo_expenses/adicionar_despesa.html
+++ b/ayamo_expenses/adicionar_despesa.html
@@ -9,7 +9,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: top;
             height: 100vh;
             margin: 0;
         }
