fechada tag <a> em index.html

--- a/ayamo_expenses/index.html
+++ b/ayamo_expenses/index.html
@@ -35,7 +35,8 @@
     <p>__ itens <b>finalizados nos últimos 15 dias</b></p>
     <br>
     <br>
-    <h3><a href="adicionar_despesa.html">Adicionar Despesa</h3>
+    <h3><a href="adicionar_despesa.html">Adicionar Despesa</a></h3>
+
 
 </body>
 </html>
