--- a/ayamo_expenses/autenticar.html
+++ b/ayamo_expenses/autenticar.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Ayamo Expenses</h1>
+    <br>
+    <h2>Bem-vindo, <i><u>usuário</u></i></h2>
+    <br>
+    <h4>Você tem:</h4>
+    <p>__ itens aguardando <b>aprovação</b></p>
+    <p>__ itens aguardando <b>reembolso</b></p>
+    <p>__ itens aguardando <b>sua resposta</b></p>
+    <p>__ itens <b>finalizados nos últimos 15 dias</b></p>
+    <br>
+    <br>
+    <h3><a href="adicionar_despesa.html">Adicionar Despesa</a></h3>
 </body>
 </html>
