--- a/ayamo_expenses/index.html
+++ b/ayamo_expenses/index.html
@@ -4,24 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayamo Expenses</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: top;
-            height: 100vh;
-            margin: 0;
-        }
-        h4 {
-            text-align: center;
-            margin: 0;
-        }
-        h3 {
-            text-align: center;
-            margin: 0;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
 <body>
     <h1>Ayamo Expenses</h1>
